autosuggest-cache-redis.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: autosuggest-cache-redis-deployment
  labels:
    app: autosuggest-cache-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autosuggest-cache-redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: autosuggest-cache-redis
        tier: backend
    spec:
      containers:
      - name: autosuggest-cache-redis
        image: "redis:4.0.8-alpine"
        resources:
          requests:
            cpu: 100m
            memory: 1Gi
        ports:
          - name: redis
            containerPort: 6379
        volumeMounts:
            - name: autosuggest-cache-redis-storage
              mountPath: /data
      volumes:
          - name: autosuggest-cache-redis-storage
            gcePersistentDisk:
              pdName: autosuggest-cache-disk-dev
              fsType: ext4
---
kind: Service
apiVersion: v1
metadata:
  name: autosuggest-cache-redis-service
spec:
  selector:
    app: autosuggest-cache-redis
    tier: backend
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
  type: ClusterIP
