autosuggest-catalog-db.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: autosuggest-catalog-db-deployment
  labels:
    app: autosuggest-catalog-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autosuggest-catalog-db
  template:
    metadata:
      labels:
        app: autosuggest-catalog-db
        tier: backend
    spec:
      containers:
      - name: autosuggest-catalog-db
        image: "mongo:3.6.2"
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
          - name: mongo
            containerPort: 27017
        volumeMounts:
            - name: autosuggest-catalog-db-storage
              mountPath: /data/db
      volumes:
          - name: autosuggest-catalog-db-storage
            gcePersistentDisk:
              pdName: autosuggest-catalog-db-disk
              fsType: ext4
---
kind: Service
apiVersion: v1
metadata:
  name: autosuggest-catalog-db-service
spec:
  selector:
    app: autosuggest-catalog-db
    tier: backend
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
  type: ClusterIP
