autosuggest-catalog-service.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: autosuggest-catalog-deployment
  labels:
    app: autosuggest-catalog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autosuggest-catalog
  template:
    metadata:
      labels:
        app: autosuggest-catalog
        tier: backend
    spec:
      containers:
      - name: autosuggest-catalog
        image: "eu.gcr.io/autosuggest-194816/autosuggest-catalog:latest"
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
          - name: http
            containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: autosuggest-catalog-service
spec:
  selector:
    app: autosuggest-catalog
    tier: backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30141
  type: LoadBalancer
